<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loginScreenAppLogo"
        android:layout_width="288dp"
        android:layout_height="164dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="61dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/project_lambda" />

    <EditText
        android:id="@+id/loginScreenEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/login_screen_email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenAppLogo" />

    <EditText
        android:id="@+id/loginScreenPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:hint="@string/login_screen_password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenSigninButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenEmail" />

    <Button
        android:id="@+id/loginScreenSigninButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="160dp"
        android:background="@color/colorAccent"
        android:text="@string/login_screen_signin_button_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>
