<resources>
    <string name="app_name">Project Lambda</string>
    <string name="app_logo_description">Project Lambda Logo</string>

    <string name="login_screen_email_hint">Email</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_signin_button_text">Sign in</string>

    <string name="logout_screen_logout_button_text">Logout</string>

    <string name="failure_incorrect_email_or_password">Incorrect email or password, try again</string>
    <string name="failure_db">Unexpected DB error, try again</string>
</resources>
